<resources>
    <string name="app_name" translatable="false">Zalo Maps</string>
    <string name="message_permission_denied">You must allow all permission to use this app</string>
    <string name="title_permission_denied">Permission denied</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="description">Note</string>

    <string name="food_drink">Food and drink</string>
    <string name="entertainment">Entertainment</string>
    <string name="education">Education</string>
    <string name="vehicle_repair">Vehicle repair</string>
    <string name="religion">Religion</string>
    <string name="administration">Administration</string>
    <string name="gasoline">Gasoline</string>
    <string name="other">Other</string>
    <string name="saved_places">Saved places</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="map">Map</string>
    <string name="delete">Delete</string>
    <string name="add_new_place">Add new place</string>
    <string name="address_not_found">Address was not found</string>
    <string name="delete_selected_places">All selected places will be deleted</string>
    <string name="address">Address</string>
    <string name="search_here">Search here</string>
    <string name="show_by_type">Show by type</string>
    <string name="alert_no_place_of_type">No place of this type found</string>
    <string name="alert_no_location">Location service is off</string>
    <string name="empty_list_message">Once you add a bookmark, you\'ll see it listed here</string>
    <string name="open_settings">Open settings</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_description">Send your feedback to help me improve this app</string>
    <string name="email_uri" translatable="false">mailto:phuongnamtruong.it@gmail.com</string>
    <string name="rate_uri" translatable="false">market://details?id=com.namnoit.zalomaps</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_description">Rate this app if you love it</string>
    <string name="help">Help</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_description">This will remove app from your device</string>
    <string name="about_app">About app</string>
    <string name="settings">Settings</string>
    <string name="showcase_fab_map">Click here to open map and save your first place</string>
    <string name="got_it">GOT IT</string>
    <string name="showcase_chip">Click these chips to filter your saved places</string>
    <string name="version">Version 1.0</string>
    <string name="app_credit">App was developed by Nam No</string>
    <string name="title_delete">Delete?</string>

    <string-array name="language_entries">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string-array name="language_values">
        <item>@string/language_eng</item>
        <item>@string/language_vie</item>
    </string-array>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="language_eng" translatable="false">en</string>
    <string name="language_vie" translatable="false">vi</string>
</resources>
